--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 group 'io.github.wagnjun'
 version '1.0-SNAPSHOT'
 
+apply plugin: "io.spring.dependency-management"
 apply plugin: 'java'
 apply plugin: 'idea'
 
@@ -10,14 +11,36 @@ targetCompatibility = 1.8
 repositories {
     mavenCentral()
 }
+dependencyManagement {
+    imports {
+        mavenBom 'org.springframework.data:spring-data-releasetrain:Hopper-SR1'
+    }
+}
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+
+    dependencies {
+        classpath "io.spring.gradle:dependency-management-plugin:0.5.3.RELEASE"
+    }
+}
+
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
-    compile 'org.springframework:spring-context:4.2.6.RELEASE'
+    compile 'org.springframework:spring-context'
+    compile 'org.springframework.data:spring-data-jpa'
+    compile 'org.hibernate:hibernate-validator:5.2.4.Final'
+    compile 'javax.el:javax.el-api:2.2.4'
+    compile 'org.glassfish.web:javax.el:2.2.4'
+
+    compile 'org.slf4j:slf4j-api:1.7.13'
+    compile 'ch.qos.logback:logback-classic:1.1.3'
 }
 
 jar {
     manifest {
-        attributes 'Main-Class': 'io.github.wagnjun.Application'
+        attributes 'Main-Class': 'io.github.wagnjun.spring.demo.bootstrap.Application'
     }
 }
