--- a/build.gradle
+++ b/build.gradle
@@ -31,12 +31,17 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
     compile 'org.springframework:spring-context'
     compile 'org.springframework.data:spring-data-jpa'
+    compile 'org.springframework:spring-oxm:4.2.5.RELEASE'
     compile 'org.hibernate:hibernate-validator:5.2.4.Final'
     compile 'javax.el:javax.el-api:2.2.4'
     compile 'org.glassfish.web:javax.el:2.2.4'
 
     compile 'org.slf4j:slf4j-api:1.7.13'
     compile 'ch.qos.logback:logback-classic:1.1.3'
+
+    compile 'org.codehaus.castor:castor-xml:1.4.1'
+    compile 'org.aspectj:aspectjweaver:1.8.9'
+    compile 'com.h2database:h2:1.4.190'
 }
 
 jar {
